图片完成，现在进行文字颜色大小设置

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sun May 08 17:00:38 CST 2016
+#Mon May 09 09:24:26 CST 2016
 systemProp.http.proxyHost=127.0.0.1
-systemProp.http.nonProxyHosts=localhost
+systemProp.http.nonProxyHosts=localhost,192.168.*
 systemProp.http.proxyPort=1080
