--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,23 @@
-<manifest package="io.github.mthli.knifedemo"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="io.github.mthli.knifedemo">
 
-    <application android:label="@string/app_name"
-                 android:icon="@mipmap/ic_launcher">
+    <uses-permission android:name="android.permission.INTERNET" />
 
-        <activity android:name=".MainActivity"
-                  android:windowSoftInputMode="adjustResize|stateHidden"
-                  android:theme="@style/MainActivityTheme">
+    <application
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/MainActivityTheme"
+            android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".WebViewActivity"></activity>
     </application>
 
 </manifest>
